# docket-pub

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Procfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: blog_authors.yaml
db/: umami_views.sql
docs/: Docket_pub_Project_Plan.md  SECURITY_CHECKLIST.md  analytics-queries.md
docs/runbooks/: analytics.md  cron-worker.md  smart-brevity-ui-flip.md  v3-cutover.md
scrapers/: __init__.py
scripts/: __init__.py  backfill_agenda_timestamps.py  backfill_ai_since.py  backfill_flag_llm_only_badges.py  backfill_member_vote_ids.py  backfill_search_vector_v3.py  backfill_vote_context.py  backfill_vote_resolution_numbers.py  blog_to_substack.py  check_state.py  deploy.sh  eval_wave1.py  import_better_bham_coverage.py  import_video_ocr.py  reset_wave1_for_v4.py  run_vote_matching.py
src/docket/: config.py  db.py
tests/: conftest.py
tests/fixtures/: umami_schema_v3.sql  vote_matcher_v2.py
tests/integration/: conftest.py  test_029_migration.py  test_033_migration.py  test_034_migration.py  test_admin_badge_audit.py  test_admin_badge_review.py  test_admin_coverage.py  test_admin_hide_meeting.py  test_admin_outlets.py  test_admin_queues.py  test_ai_cache.py  test_ai_meeting_telescoping.py  test_ai_phase_lifecycle.py  test_ai_pipeline_e2e.py  test_ai_prompt_version_bump.py  test_analytics_views.py  test_auth_session.py  test_backfill_flag_llm_only_badges.py  test_badge_volume_series.py  test_blog_integration.py  test_calibration.py  test_category_landing.py  test_rosters.py  (+25 more)
web/: __init__.py
(+451 files in other folders)
