[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "docket"
version = "0.1.0"
requires-python = ">=3.10"
# Runtime dependencies are sourced from requirements.txt (the Dockerfile's
# canonical install list). Editing requirements.txt is the single point of
# update; `pip install -e .` and `pip install -r requirements.txt` resolve
# the same set.
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["live: makes real Anthropic API calls; opt-in via -m live"]

[tool.ruff]
target-version = "py310"
